tests/negative/typecheck/arg_named_too_many.orng
fn main() -> Int {
    f(.x = 4, .y = 4)
}

fn f(x: Int) -> Int {
    x
}